# garden-master

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
data/: green-thumb.db  plants.db
master/: aliases.js  search-index.js  source-files.js
master/green_thumb/: all.html  fn.main.html  index.html  sidebar-items.js
master/green_thumb/crop/: index.html  sidebar-items.js  struct.Crop.html
master/green_thumb/datamgr/: index.html  struct.DataMgr.html
master/green_thumb/db/: index.html  sidebar-items.js  struct.DataMgr.html
master/green_thumb/db/crop/: index.html  struct.Crop.html
master/green_thumb/db/datamgr/: index.html  struct.DataMgr.html
master/green_thumb/db/plant/: _IMPL_SERIALIZE_FOR_PlantType.v.html  constant._IMPL_DESERIALIZE_FOR_PlantType.html  constant._IMPL_SERIALIZE_FOR_PlantType.html  enum.PlantType.html  index.html  sidebar-items.js  struct.Plant.html
master/green_thumb/db/task/: index.html  sidebar-items.js  struct.Task.html
master/green_thumb/logging/: fn.logging_init.html  index.html
master/green_thumb/plant/: _IMPL_DESERIALIZE_FOR_PlantType.v.html  constant._IMPL_DESERIALIZE_FOR_PlantType.html  constant._IMPL_SERIALIZE_FOR_PlantType.html  enum.PlantType.html  index.html  sidebar-items.js  struct.Plant.html
master/implementors/strum/: trait.AsStaticRef.js
master/src/green_thumb/: crop.rs.html  datamgr.rs.html  logging.rs.html  main.rs.html  plant.rs.html
src/: crop.rs  datamgr.rs  logging.rs  main.rs  plant.rs
src/db/: crop.rs  datamgr.rs  mod.rs  plant.rs  task.rs
(+26 files in other folders)
