[package]
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
name = "green-thumb"
readme = "README.md"
version = "0.1.0"

[dependencies]
chrono = "0.4.10"
clap = "2.33.0"
log = "0.4.8"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_rusqlite = "0.23.0"
simplelog = "0.7.4"
strum = "0.17.1"
strum_macros = "0.17.1"

[dependencies.rusqlite]
version = "0.21.0"
features = ["chrono", "bundled"]
