[package]
authors = ["Lucas Brendel <lucasbrendel@gmail.com>"]
name = "green-thumb"
readme = "README.md"
version = "0.1.0"

[dependencies]
chrono = "0.4.11"
clap = "2.33.0"
log = "0.4.8"
serde = "1.0.106"
serde_derive = "1.0.106"
serde_rusqlite = "0.16.0"
simplelog = "0.7.5"
strum = "0.18.0"
strum_macros = "0.18.0"

[dependencies.rusqlite]
version = "0.15.0"
features = ["chrono", "bundled"]
